feat(KSTIP-1055): fix some sonarqube issues